--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
         <section id="maneiras">
             <h3>SEJA CLIENTE DE DIVERSAS MANEIRAS</h3>
-            <div class="maneira-container"> <!-- Container único para todos os itens -->
+            <!-- Container único para todos -->
+            <div class="maneira-container"> 
                 <div class="clientManeiras">
                     <img src="images/cartaoUm.jpg" alt="">
                     
@@ -88,10 +89,56 @@
                 </div>
             </div>
         </section>
-                    
+        <div class="container">
+            <h4 class="text-center my-4">Horários de atendimento</h4>
+            <div class="d-flex justify-content-center">
+                <table class="table w-75 shadow-table">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th class="bg bg-danger text-white">SEGUNDA</th>
+                        <th class="bg bg-danger text-white">TERÇA</th>
+                        <th class="bg bg-danger text-white">QUARTA</th>
+                        <th class="bg bg-danger text-white">QUINTA</th>
+                        <th class="bg bg-danger text-white">SEXTA</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th class="bg bg-danger text-white">Marcelo</th>
+                        <td>9:00 até as 13:00</td>
+                        <td>8:00 até as 12:00</td>
+                        <td>9:00 até as 14:00</td>
+                        <td>9:00 até as 12:00</td>
+                        <td>9:00 até as 12:00</td>
+                    </tr>
+                    <tr>
+                        <th class="bg bg-danger text-white">Daniela</th>
+                        <td>9:00 até as 13:00</td>
+                        <td>8:00 até as 12:00</td>
+                        <td>9:00 até as 14:00</td>
+                        <td>9:00 até as 12:00</td>
+                        <td>9:00 até as 12:00</td>
+                    </tr>
+                    <tr>
+                        <th class="bg bg-danger text-white">João</th>
+                        <td>9:00 até as 13:00</td>
+                        <td>8:00 até as 12:00</td>
+                        <td>9:00 até as 14:00</td>
+                        <td>9:00 até as 12:00</td>
+                        <td>9:00 até as 12:00</td>
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+        </div>         
     </main>
 
-    <footer></footer>
+    <footer class="bg-danger text-white py-3">
+        <div class="container text-center">
+            <h6 class="m-0">Todos os direitos reservados a Bank 90</h6>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
